changed size of hamburger, fixed vertical alignment of menu

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,7 +17,7 @@ p, h2 {
   cursor: pointer;
 
   display: inline-block;
-  font-size: 2rem;
+  font-size: 1rem;
   height: 1em;
   padding: 0;
   transition: transform .2s ease-in-out;
@@ -28,25 +28,25 @@ p, h2 {
 .hamburger:before, .hamburger:after {
    content: "";
   display: block;
-  width: 80%;
+  width: 100%;
   height: 1px;
  
-  margin-bottom: .2em;
+  margin-bottom: .3em;
   transition: transform .1s ease-in-out;
   background: #fff;
 }
 
 .hamburger:before {
- margin-top: .3em;
+ margin-top: .2em;
 }
 .hamburger:hover:before {
   transform: translateY(.1em) rotate(90deg);
-  width: 60%;
+  width: 100%;
 }
 
 .hamburger:hover:after {
-  transform: translateY(-.15em) rotate(180deg);
-  width: 60%;
+  transform: translateY(-.25em) rotate(180deg);
+  width: 100%;
 }
 
 .hamburger_open {
